# ruruby

./: Cargo.toml  bench_opt.md  bench_opt_ivar2.md  test.rb
bench/: bench.rb
src/: alloc.rs  builtin.rs  coroutine.rs  error.rs  globals.rs  lib.rs  main.rs  parse.rs  test.rs  util.rs  value.rs  vm.rs  wasm_repl.rs
src/builtin/: array.rs  comparable.rs  exception.rs  io.rs  kernel.rs  module.rs  numeric.rs  object.rs  string.rs  structobj.rs
src/globals/: constants.rs  ivars.rs
src/parse/: codegen.rs  lexer.rs  node.rs  parser.rs
src/startup/: startup.rb
src/value/: class.rs  object.rs  rvalue.rs  value.rs
src/vm/: codegen.rs  context.rs  executor.rs  iseq.rs  ivars.rs  method.rs  perf.rs  vm_inst.rs
tests/: vm_test.rs
