[package]
name = "ruruby"
version = "0.2.0"
authors = ["monochrome <sisshiki@mac.com>"]
edition = "2018"
license-file = "LICENSE"
repository = "https://github.com/sisshiki1969/ruruby"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
perf = []
trace = []
trace-func = []
emit-iseq = []
gc-debug = []
verbose = []

[dependencies]
clap = "2.33.1"
ansi_term = "0.12.1"
regex = "1.4.2"
fancy-regex = "0.4.1"
rand = "0.8.3"
divrem = "0.1.0"
fxhash = "0.2.1"
chrono = "0.4.15"
term_size = { git = "https://github.com/clap-rs/term_size-rs", rev = "e714b6a83f988b784ba4240c892a0edb2d0a5ae2" }
console = "0.14.0"
dirs = "3.0.1"
smallvec = "1.5.0"
arraystring = "0.3.0"
once_cell = "1.5.2"
instant = { version = "0.1", features = ["wasm-bindgen"] }

[target.'cfg(not(all(target_arch = "wasm32", target_os = "unknown")))'.dependencies]
rustyline = "7.0.0"

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
# Ensure that the transitive dependency uses the feature.
getrandom = { version = "*", features = ["js"] }
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"

[profile.release]
debug = false